<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#050505"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/regreso"
        android:layout_width="555dp"
        android:layout_height="331dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/regreso" />

    <Button
        android:id="@+id/boton_inicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/boton_redondeado"
        android:text="@string/btn_inicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regreso"
        android:onClick="inicio"
        app:layout_constraintVertical_bias="0.403" />

    <Button
        android:id="@+id/boton_registro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/boton_redondeado"
        android:text="@string/btn_registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_inicio"
        android:onClick="registro"
        app:layout_constraintVertical_bias="0.06999999" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="269dp"
        android:layout_height="85dp"
        android:fontFamily="@font/orbitron"
        android:text="@string/texto_inicio"
        android:textAlignment="center"
        android:textColor="@color/gris"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/boton_inicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regreso"
        app:layout_constraintVertical_bias="0.232" />
</androidx.constraintlayout.widget.ConstraintLayout>